--- a/src/Components/Hero/Hero.scss
+++ b/src/Components/Hero/Hero.scss
@@ -4,19 +4,57 @@
   max-width: 1200px;
   margin: 0 auto;
   position: relative;
+  display: flex;
+  justify-content: space-between;
+  max-height: 100%;
+
+  @media screen and (max-width: 740px) {
+    align-content: stretch;
+    flex-direction: column;
+    height: calc(100vh - 100px);
+  }
 
   &__wrap {
     background: url('../../assets/hero@2x.jpg');
     background-size: cover;
+
+    @media screen and (max-width: 740px) {
+      height: 100vh;
+    }
   }
 
+  &__welcome {
+    box-sizing: border-box;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 10% 0 10% 2em;
+    max-width: 50%;
+
+    @media screen and (max-width: 740px) {
+      height: unset;
+      max-width: 100%;
+      padding: 2em;
+    }
+
+  }
   &__header {
     font-size: 32px;
     margin: 0 0 32px 0;
+
+    @media screen and (max-width: 740px) {
+      font-size: 24px;
+      margin: 0 0 16px 0;
+    }
   }
 
   &__text {
     font-size: 18px;
+
+    @media screen and (max-width: 740px) {
+      display:none;
+    }
   }
 
   &__appStoreButton, &__googlePlayButton {
@@ -25,9 +63,22 @@
   }
 
   &__appMockup {
-    position: absolute;
-    max-height: 80%;
-    bottom: 0;
-    right: 0;
+    height: 100%;
+    @media screen and (max-width: 740px) {
+      width: 180%;
+      position: relative;
+      right: 40%;
+      height: unset;
+    }
+    &Wrap {
+      max-width: 60%;
+      @media screen and (max-width: 740px) {
+        max-width: unset;
+      }
+      @media screen and (max-width: 1200px) {
+        overflow: hidden;
+      }
+    }
   }
+
 }
