--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -3,4 +3,12 @@
   justify-content: space-between;
   align-items: center;
   height: 100px;
+  color: white;
+  max-width: 1200px;
+  padding: 0 2em;
+  margin: 0 auto;
+
+  &__logo {
+      width: 180px;
+  }
 }
