--- a/src/Components/PricesSection/PricesSection.scss
+++ b/src/Components/PricesSection/PricesSection.scss
@@ -4,6 +4,10 @@
   background: $brown;
   padding: 4em;
 
+  @media screen and (max-width: 740px) {
+    padding: unset;
+  }
+
   &__header {
     font-size: 22px;
     font-weight: bold;
